fix: change HTML & README.md content

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
     <main>
         <section>
-            <h2>The hex code of this color is:<br> <span>white</span></h2>
+            <h2>The background color is:<br> <span>white</span></h2>
             <button>Click Me!</button>
         </section>
     </main>
